Delete FixHeader on Iphone

--- a/css/interval.css
+++ b/css/interval.css
@@ -45,6 +45,7 @@ h3 {
 }
 .search-bar input {
     width: 91%;
+    border-radius: none;
 }
 .search-bar_submit::after {
     font-family: "Font Awesome 5 Free", serif;
