--- a/css/phone.css
+++ b/css/phone.css
@@ -25,12 +25,9 @@ p {
 }
 .l-header {
     display: block;
-    position: fixed;
-    background-color: #fff;
-    z-index: 2;
 }
 .l-search {
-    padding: 150px 15px 0 15px;
+    padding: 0 15px 0 15px;
 }
 .l-lodging {
     background-color: transparent;
@@ -63,7 +60,6 @@ p {
     font-size: 0.9rem;
 }
 .navigation_ul a {
-    background-color: #fff;
     padding: 0px 50px 12px;
     border-bottom: 2px solid #F2F2F2;
 }
@@ -101,7 +97,7 @@ p {
     width: 79%;
     height: 40px;
     font-size: 0.9rem;
-
+    border-radius: none;
 }
 .search-bar_submit::after {
     font-family: "Font Awesome 5 Free", serif;
@@ -286,4 +282,297 @@ p {
 }
 .footer_list ul li {
     margin-bottom: 9px;
+}
+@media
+  only screen and (-webkit-min-device-pixel-ratio: 2.0),
+  only screen and (   min--moz-device-pixel-ratio: 2.0),
+  only screen and (     -o-min-device-pixel-ratio: 2.0/1),
+  only screen and (        min-device-pixel-ratio: 2.0),
+  only screen and (                min-resolution: 326dpi),
+  only screen and (                min-resolution: 2.0dppx) { 
+    /*--------------------------------------------------------*\
+                            BASE
+    \*--------------------------------------------------------*/
+    .main-wrapper {
+        width: 375px;
+        margin: auto;
+    }
+    .mainContent {
+        padding: 0;
+    }
+    h1, h2 {
+        font-size: 1.4rem;
+    }
+    h3 {
+        font-size: 0.9rem;
+    }
+    p {
+        font-size: 0.9rem;
+    }
+    /*--------------------------------------------------------*\
+                                Layout
+    \*--------------------------------------------------------*/
+    .l-main {
+        flex-direction: column-reverse;
+    }
+    .l-header {
+        display: block;
+    }
+    .l-search {
+        padding: 0 15px 0 15px;
+    }
+    .l-lodging {
+        background-color: transparent;
+    }
+    .l-aside {
+        border-radius: 0;
+        padding: 25px 25px 0 25px;
+    }
+    .l-activities {
+        padding: 0 22px;
+    }
+    .l-footer {
+        flex-direction: column;
+        padding: 30px 0 0 0;
+    }
+    /*--------------------------------------------------------*\
+                                HEADER
+    \*--------------------------------------------------------*/
+    .logo {
+        margin-bottom: 15px;
+        padding: 0 15px;
+    }
+    .navigation {
+        position: relative;
+    }
+    .sign-in {
+        position: absolute;
+        top: -45px;
+        right: 15px;
+        font-size: 0.9rem;
+    }
+    .navigation_ul a {
+        padding: 0px 50px 12px;
+        border-bottom: 2px solid #F2F2F2;
+    }
+    .navigation_ul a:hover {
+        border-bottom: 2px solid #0065FC;
+        border-top: none;
+    }
+    .navigation_ul li {
+        margin-right: 0;
+        font-size: 1rem;
+    }
+    /*--------------------------------------------------------*\
+                        LODGING SEARCH BAR
+    \*--------------------------------------------------------*/
+    .search_title h2 {
+        line-height: 25px;
+    }
+    .search_title p, .filter-result {
+        font-size: 1rem;
+        letter-spacing: 0;
+        margin-top: 10px;
+    }
+    .search-bar {
+        position: relative;
+    }
+    .search-bar label {
+        width: 40px;
+        height: 40px;
+        padding: 12px 14px;
+    }
+    .search-bar_icon {
+        font-size: 1rem;
+    }
+    .search-bar input {
+        width: 79%;
+        height: 40px;
+        font-size: 0.9rem;
+        border-radius: none;
+    }
+    .search-bar_submit::after {
+        font-family: "Font Awesome 5 Free", serif;
+        font-weight: 900;
+        content: '\f002';
+    }
+    .search-bar_submit {
+        border-radius: 10px;
+        padding: 13px;
+        position: absolute;
+        right: 4px;
+    }
+    .filter_title {
+        margin-bottom: 10px;
+    }
+    .filter, .filter_cat {
+        flex-wrap: wrap;
+    }
+    .filter-cat {
+        margin-top: 10px;
+    }
+    .filter_cat_icon {
+        height: 40px;
+        width: 40px;
+        font-size: 0.9rem;
+        padding: 13px 6px;
+    }
+    .filter_cat_label {
+        margin: 0 9px 9px 0;
+    }
+    .filter-result {
+        width: 100%;
+        display: block;
+        position: relative;
+        padding-left: 30px;
+    }
+    .filter-result_icon {
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        left: 0;
+        top: -3px;
+        font-size: 0.7rem;
+    }
+    /*--------------------------------------------------------*\
+                        LODGING LEFT SIDE
+    \*--------------------------------------------------------*/
+    .lodging_box {
+        width: 100%;
+        height: 182px;
+    }
+    .lodging_box:hover, .lodging-as_box:hover {
+        transform: none;
+    }
+    .lodging_h2, .aside_title, .activities_title {
+        font-size: 1.4rem;
+    }
+    .lodging_title {
+        padding-right: 21px;
+    }
+    .lodging_price {
+        font-size: 0.8rem;
+    }
+    .lodging-as_stars {
+        margin-top: 12px;
+    }
+    .fa-star {
+        font-size: 0.7rem;
+    }
+    .cannebiere {
+        width: 334px;
+        left: -3%;
+        top: -66%;
+    }
+    .hPort {
+        width: 334px;
+        left: -1%;
+        top: -81%;
+    }
+    .mouettes {
+        width: 330px;
+        left: -1%;
+        top: -87%;
+    }
+    .hMer { 
+        width: 327px;
+        left: 0%;
+        top: -123%;
+    }
+    .lePanier {
+        width: 333px;
+        left: -1%;
+        top: -52%;
+    }
+    .hAmina {
+        width: 331px;
+        left: -1%;
+        top: -221%;
+    }
+    /*--------------------------------------------------------*\
+                        LODGING RIGHT SIDE
+    \*--------------------------------------------------------*/
+    .lodging-as_img {
+        flex: 3.6;
+    }
+    .lodging-as_txtbox {
+        padding: 11px 0 0 7px;
+    }
+    .soleilMatin {
+        left: -34%;
+        top: -36%;
+        width: 214px;
+    }
+    .coeurEau {
+        width: 192px;
+        left: -36%;
+        top: -36%;
+    }
+    .bleuBlanc {
+        width: 203px;
+        left: -14%;
+        top: -141%;
+    }
+    /*-
+    /*--------------------------------------------------------*\
+                            ACTIVITIES
+    \*--------------------------------------------------------*/
+    .activities_container {
+        flex-direction: column;
+    }
+    .activity {
+        margin-right: 0;
+    }
+    .activity_img--long, .activity_img--medium, .activity_img--small {
+        width: 100%;
+    }
+    .activity_img--long, .long, .activity_img--medium, .medium, .activity_img--medium, .medium  {
+        height: 170px;
+    }
+    .activity_title {
+        padding: 8px 10px;
+        margin-bottom: 6px;
+    }
+    .vieuxPort {
+        width: 337px;
+        left: 0%;
+        top: -18%;
+    }
+    .fortPomegues {
+        width: 334px;
+        left: 0%;
+        top: -129%;
+    }
+    .frioul {
+        width: 332px;
+        left: 0%;
+        top: -60%;
+    }
+    .parcNational {
+        width: 334px;
+        left: 0%;
+        top: -45%;
+    }
+    .notreDame {
+        width: 334px;
+        left: 0%;
+        top: -30%;
+    }
+    .longChamp {
+        width: 334px;
+        left: 0%;
+        top: -45%;
+    }
+    /*--------------------------------------------------------*\
+                            FOOTER
+    \*--------------------------------------------------------*/
+    .footer_list h4, .footer_list ul {
+        font-size: 0.9rem;
+    }
+    .footer_list {
+        margin-bottom: 25px;
+    }
+    .footer_list ul li {
+        margin-bottom: 9px;
+    }
 }
